[gd_scene load_steps=12 format=4 uid="uid://cvkoe48bl068"]

[ext_resource type="Texture2D" uid="uid://deteum74aejln" path="res://allSprites_retina.png" id="1_u52ul"]
[ext_resource type="Script" uid="uid://dyk3yawwwxpft" path="res://Main.gd" id="1_vonw3"]
[ext_resource type="Script" uid="uid://6bpgqn3bsiss" path="res://gui.gd" id="4_0b4ue"]
[ext_resource type="PackedScene" uid="uid://b5q55tc1xjltc" path="res://enemy.tscn" id="4_f2txt"]
[ext_resource type="Texture2D" uid="uid://44qvyqoxhm23" path="res://spritesheet_hud.png" id="5_1ainy"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_vonw3"]
texture = ExtResource("1_u52ul")
texture_region_size = Vector2i(128, 128)
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
7:1/0 = 0
0:2/0 = 0
1:2/0 = 0
1:2/0/terrain_set = 0
1:2/0/terrain = 0
1:2/0/terrains_peering_bit/right_side = 1
1:2/0/terrains_peering_bit/bottom_side = 1
1:2/0/terrains_peering_bit/left_side = 0
1:2/0/terrains_peering_bit/top_side = 0
2:2/0 = 0
3:2/0 = 0
3:2/0/terrain_set = 0
3:2/0/terrain = 1
3:2/0/terrains_peering_bit/right_side = 1
3:2/0/terrains_peering_bit/bottom_side = 1
3:2/0/terrains_peering_bit/left_side = 1
3:2/0/terrains_peering_bit/top_side = 1
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
7:2/0 = 0
0:3/0 = 0
1:3/0 = 0
1:3/0/terrain_set = 0
1:3/0/terrain = 0
1:3/0/terrains_peering_bit/right_side = 0
1:3/0/terrains_peering_bit/bottom_side = 1
1:3/0/terrains_peering_bit/left_side = 1
1:3/0/terrains_peering_bit/top_side = 0
2:3/0 = 0
3:3/0 = 0
3:3/0/terrain_set = 0
3:3/0/terrain = 0
3:3/0/terrains_peering_bit/right_side = 0
3:3/0/terrains_peering_bit/bottom_side = 1
3:3/0/terrains_peering_bit/left_side = 0
3:3/0/terrains_peering_bit/top_side = 0
4:3/0 = 0
5:3/0 = 0
6:3/0 = 0
7:3/0 = 0
0:4/0 = 0
0:4/0/terrain_set = 0
0:4/0/terrain = 0
0:4/0/terrains_peering_bit/right_side = 1
0:4/0/terrains_peering_bit/bottom_side = 0
0:4/0/terrains_peering_bit/left_side = 0
0:4/0/terrains_peering_bit/top_side = 1
1:4/0 = 0
1:4/0/terrain_set = 0
2:4/0 = 0
3:4/0 = 0
3:4/0/terrain_set = 0
3:4/0/terrain = 0
3:4/0/terrains_peering_bit/right_side = 0
3:4/0/terrains_peering_bit/bottom_side = 0
3:4/0/terrains_peering_bit/left_side = 0
3:4/0/terrains_peering_bit/top_side = 0
4:4/0 = 0
4:4/0/terrain_set = 0
4:4/0/terrain = 0
4:4/0/terrains_peering_bit/right_side = 1
4:4/0/terrains_peering_bit/bottom_side = 0
4:4/0/terrains_peering_bit/left_side = 0
4:4/0/terrains_peering_bit/top_side = 0
5:4/0 = 0
6:4/0 = 0
7:4/0 = 0
0:5/0 = 0
0:5/0/terrain_set = 0
0:5/0/terrain = 0
0:5/0/terrains_peering_bit/right_side = 0
0:5/0/terrains_peering_bit/bottom_side = 0
0:5/0/terrains_peering_bit/left_side = 1
0:5/0/terrains_peering_bit/top_side = 1
1:5/0 = 0
1:5/0/terrain_set = 0
1:5/0/terrain = 0
1:5/0/terrains_peering_bit/right_side = 0
1:5/0/terrains_peering_bit/bottom_side = 0
1:5/0/terrains_peering_bit/left_side = 0
1:5/0/terrains_peering_bit/top_side = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
5:5/0 = 0
6:5/0 = 0
7:5/0 = 0
0:6/0 = 0
0:6/0/terrain_set = 0
0:6/0/terrain = 0
0:6/0/terrains_peering_bit/right_side = 0
0:6/0/terrains_peering_bit/bottom_side = 1
0:6/0/terrains_peering_bit/left_side = 0
0:6/0/terrains_peering_bit/top_side = 1
1:6/0 = 0
1:6/0/terrain_set = 0
1:6/0/terrain = 0
1:6/0/terrains_peering_bit/right_side = 0
1:6/0/terrains_peering_bit/bottom_side = 0
1:6/0/terrains_peering_bit/left_side = 1
1:6/0/terrains_peering_bit/top_side = 0
2:6/0 = 0
3:6/0 = 0
3:6/0/terrain_set = 0
3:6/0/terrain = 0
3:6/0/terrains_peering_bit/right_side = 0
3:6/0/terrains_peering_bit/bottom_side = 0
3:6/0/terrains_peering_bit/left_side = 0
3:6/0/terrains_peering_bit/top_side = 1
4:6/0 = 0
5:6/0 = 0
6:6/0 = 0
7:6/0 = 0
0:7/0 = 0
1:7/0 = 0
1:7/0/terrain_set = 0
1:7/0/terrain = 0
1:7/0/terrains_peering_bit/right_side = 1
1:7/0/terrains_peering_bit/bottom_side = 0
1:7/0/terrains_peering_bit/left_side = 1
1:7/0/terrains_peering_bit/top_side = 0
2:7/0 = 0
3:7/0 = 0
3:7/0/terrain_set = 0
3:7/0/terrain = 1
3:7/0/terrains_peering_bit/right_side = 1
3:7/0/terrains_peering_bit/bottom_side = 1
3:7/0/terrains_peering_bit/left_side = 1
3:7/0/terrains_peering_bit/top_side = 1
4:7/0 = 0
5:7/0 = 0
6:7/0 = 0
7:7/0 = 0

[sub_resource type="TileSet" id="TileSet_oi3di"]
tile_size = Vector2i(128, 128)
physics_layer_0/collision_layer = 1
terrain_set_0/mode = 2
terrain_set_0/terrain_0/name = "Street"
terrain_set_0/terrain_0/color = Color(0.5, 0.34375, 0.25, 1)
terrain_set_0/terrain_1/name = "Grass"
terrain_set_0/terrain_1/color = Color(0.5, 0.4375, 0.25, 1)
sources/1 = SubResource("TileSetAtlasSource_vonw3")

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_0b4ue"]

[sub_resource type="AtlasTexture" id="AtlasTexture_n6hdu"]
atlas = ExtResource("5_1ainy")
region = Rect2(22, 534, 86, 86)
margin = Rect2(5, 5, 10, 10)

[sub_resource type="AtlasTexture" id="AtlasTexture_1ainy"]
atlas = ExtResource("5_1ainy")
region = Rect2(164, 938, 53, 52)
margin = Rect2(5, 5, 10, 10)

[sub_resource type="Curve2D" id="Curve2D_1ainy"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 2056, 450, 23.3504, -1.03197, -23.3504, 1.03197, 499, 449, 0, -23.1405, 0, 23.1405, 450, 493, -0.826446, -28.9256, 0.826446, 28.9256, 448, 781, -27.2727, -0.826446, 27.2727, 0.826446, 500, 831, 0, 0, 0, 0, 2064, 833)
}
point_count = 6

[node name="Level" type="Node2D"]
script = ExtResource("1_vonw3")
enemycount = 15
enemyType = ExtResource("4_f2txt")
enemyCoolDown = 0.5
startingFunds = 2000

[node name="TileMapLayer" type="TileMapLayer" parent="."]
z_index = -1000
tile_map_data = PackedByteArray("AAANAAgAAQADAAIAAAANAAcAAQADAAcAAAANAAYAAQAAAAYAAAANAAUAAQADAAIAAAANAAQAAQADAAcAAAANAAMAAQAAAAYAAAANAAIAAQADAAIAAAANAAEAAQADAAIAAAANAAAAAQADAAcAAAAMAAgAAQADAAIAAAAMAAcAAQADAAcAAAAMAAYAAQAAAAYAAAAMAAUAAQADAAcAAAAMAAQAAQADAAIAAAAMAAMAAQAAAAYAAAAMAAIAAQADAAcAAAAMAAEAAQADAAcAAAAMAAAAAQADAAcAAAALAAgAAQADAAIAAAALAAcAAQADAAcAAAALAAYAAQAAAAYAAAALAAQAAQADAAIAAAALAAMAAQAAAAYAAAALAAIAAQADAAIAAAALAAEAAQADAAcAAAALAAAAAQADAAIAAAAKAAgAAQADAAcAAAAKAAcAAQADAAIAAAAKAAUAAQADAAIAAAAKAAQAAQADAAcAAAAKAAMAAQAAAAYAAAAKAAIAAQADAAIAAAAKAAEAAQADAAIAAAAKAAAAAQADAAIAAAAJAAgAAQADAAIAAAAJAAcAAQADAAIAAAAJAAYAAQAAAAYAAAAJAAUAAQADAAIAAAAJAAQAAQADAAIAAAAJAAMAAQAAAAYAAAAJAAIAAQADAAcAAAAJAAEAAQADAAIAAAAJAAAAAQADAAIAAAAIAAgAAQADAAcAAAAIAAcAAQADAAIAAAAIAAYAAQAAAAYAAAAIAAUAAQADAAcAAAAIAAQAAQADAAIAAAAIAAMAAQAAAAYAAAAIAAIAAQADAAIAAAAIAAEAAQADAAcAAAAIAAAAAQADAAcAAAAHAAgAAQADAAIAAAAHAAcAAQADAAcAAAAHAAYAAQAAAAYAAAAHAAUAAQADAAIAAAAHAAQAAQADAAIAAAAHAAMAAQAAAAYAAAAHAAIAAQADAAIAAAAHAAEAAQADAAcAAAAHAAAAAQADAAIAAAAGAAgAAQADAAcAAAAGAAcAAQADAAIAAAAGAAYAAQAAAAYAAAAGAAUAAQADAAIAAAAGAAQAAQADAAIAAAAGAAMAAQAAAAYAAAAGAAIAAQADAAIAAAAGAAEAAQADAAcAAAAGAAAAAQADAAcAAAAFAAgAAQADAAIAAAAFAAcAAQADAAcAAAAFAAYAAQAAAAYAAAAFAAUAAQADAAIAAAAFAAQAAQADAAIAAAAFAAMAAQAAAAYAAAAFAAIAAQADAAIAAAAFAAEAAQADAAIAAAAFAAAAAQADAAcAAAAEAAgAAQADAAcAAAAEAAcAAQADAAcAAAAEAAYAAQAAAAYAAAAEAAUAAQADAAcAAAAEAAQAAQADAAIAAAAEAAMAAQAAAAYAAAAEAAIAAQADAAcAAAAEAAEAAQADAAIAAAAEAAAAAQADAAIAAAADAAgAAQADAAcAAAADAAcAAQADAAIAAAADAAYAAQABAAMAAAADAAUAAQABAAcAAAADAAQAAQABAAcAAAADAAMAAQAAAAUAAAADAAIAAQADAAcAAAADAAEAAQADAAIAAAADAAAAAQADAAcAAAACAAgAAQADAAIAAAACAAcAAQADAAcAAAACAAYAAQADAAcAAAACAAUAAQADAAcAAAACAAQAAQADAAIAAAACAAMAAQADAAIAAAACAAIAAQADAAcAAAACAAEAAQADAAcAAAACAAAAAQADAAcAAAABAAgAAQADAAcAAAABAAcAAQADAAIAAAABAAYAAQADAAcAAAABAAUAAQADAAIAAAABAAQAAQADAAIAAAABAAMAAQADAAIAAAABAAIAAQADAAIAAAABAAEAAQADAAIAAAABAAAAAQADAAcAAAAAAAgAAQADAAcAAAAAAAcAAQADAAcAAAAAAAYAAQADAAIAAAAAAAUAAQADAAcAAAAAAAQAAQADAAIAAAAAAAMAAQADAAcAAAAAAAIAAQADAAIAAAAAAAEAAQADAAIAAAAAAAAAAQADAAIAAAAKAAYAAQAAAAYAAAALAAUAAQADAAIAAAAPAAkAAQADAAIAAAAPAAgAAQADAAIAAAAPAAcAAQADAAIAAAAPAAYAAQAAAAYAAAAPAAUAAQADAAcAAAAPAAQAAQADAAIAAAAPAAMAAQAAAAYAAAAPAAIAAQADAAIAAAAPAAEAAQADAAIAAAAPAAAAAQADAAcAAAAOAAkAAQADAAIAAAAOAAgAAQADAAcAAAAOAAcAAQADAAcAAAAOAAYAAQAAAAYAAAAOAAUAAQADAAcAAAAOAAQAAQADAAIAAAAOAAMAAQAAAAYAAAAOAAIAAQADAAIAAAAOAAEAAQADAAcAAAAOAAAAAQADAAcAAAANAAkAAQADAAcAAAAMAAkAAQADAAcAAAALAAkAAQADAAIAAAAKAAkAAQADAAcAAAAJAAkAAQADAAcAAAAIAAkAAQADAAIAAAAHAAkAAQADAAcAAAAGAAkAAQADAAIAAAAFAAkAAQADAAcAAAAEAAkAAQADAAIAAAADAAkAAQADAAIAAAACAAkAAQADAAIAAAABAAkAAQADAAcAAAAAAAkAAQADAAcAAAA=")
tile_set = SubResource("TileSet_oi3di")

[node name="road" type="Area2D" parent="TileMapLayer"]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="TileMapLayer/road"]
polygon = PackedVector2Array(2051, 400, 453.323, 398.063, 401, 450, 401.876, 826.535, 454, 880, 2054, 880, 2053, 783, 501, 783, 500, 498, 2051, 497)

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(1011, 569)
zoom = Vector2(0.57, 0.57)

[node name="CanvasLayer" type="CanvasLayer" parent="Camera2D"]

[node name="TextureRect" type="TextureRect" parent="Camera2D/CanvasLayer"]
self_modulate = Color(0, 0, 0, 0.359)
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 80.0
grow_horizontal = 2
texture = SubResource("PlaceholderTexture2D_0b4ue")
stretch_mode = 1

[node name="HBoxContainer" type="HBoxContainer" parent="Camera2D/CanvasLayer/TextureRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("4_0b4ue")

[node name="Button" type="Button" parent="Camera2D/CanvasLayer/TextureRect/HBoxContainer"]
layout_mode = 2
text = "Build
Tower
(6)"

[node name="Padding" type="Control" parent="Camera2D/CanvasLayer/TextureRect/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 6

[node name="VBoxContainer" type="VBoxContainer" parent="Camera2D/CanvasLayer/TextureRect/HBoxContainer"]
layout_mode = 2

[node name="FundsContainer" type="HBoxContainer" parent="Camera2D/CanvasLayer/TextureRect/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 8

[node name="Coin" type="TextureRect" parent="Camera2D/CanvasLayer/TextureRect/HBoxContainer/VBoxContainer/FundsContainer"]
custom_minimum_size = Vector2(38.945, 0)
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 4
texture = SubResource("AtlasTexture_n6hdu")
expand_mode = 4

[node name="CoinX" type="TextureRect" parent="Camera2D/CanvasLayer/TextureRect/HBoxContainer/VBoxContainer/FundsContainer"]
custom_minimum_size = Vector2(23.9, 0)
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 4
texture = SubResource("AtlasTexture_1ainy")
expand_mode = 4

[node name="Funds" type="Label" parent="Camera2D/CanvasLayer/TextureRect/HBoxContainer/VBoxContainer/FundsContainer"]
layout_mode = 2
theme_override_colors/font_outline_color = Color(0.596078, 0.596078, 0.596078, 1)
theme_override_constants/outline_size = 9
theme_override_font_sizes/font_size = 28
text = "200"

[node name="LifeContainer" type="HBoxContainer" parent="Camera2D/CanvasLayer/TextureRect/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 8

[node name="MarginRight" type="TextureRect" parent="Camera2D/CanvasLayer/TextureRect/HBoxContainer"]
layout_mode = 2
expand_mode = 1

[node name="Path2D" type="Path2D" parent="."]
curve = SubResource("Curve2D_1ainy")

[node name="EnemyTimer" type="Timer" parent="."]
autostart = true

[connection signal="pressed" from="Camera2D/CanvasLayer/TextureRect/HBoxContainer/Button" to="." method="_on_button_pressed"]
[connection signal="timeout" from="EnemyTimer" to="." method="_on_enemy_timer_timeout"]
